# openapi/openapi.yaml
@@ -107,6 +107,29 @@ paths:
           $ref: '#/components/responses/BadRequestError'
         '500':
           $ref: '#/components/responses/InternalServerError'
+  /users/{id}/tasks:
+    get:
+      summary: Get tasks for a specific user
+      tags:
+        - tasks
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '200':
+          description: A list of tasks for the user
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
+        '404':
+          description: User not found or no tasks found
   /tasks:
     get:
       summary: Получить список всех задач
@@ -143,7 +166,12 @@ paths:
                 is_done:
                   type: boolean
                   description:  c
+                user_id:
+                  type: integer
+                  format: uint
+                  description: user_id
               required:
+                - user_id
                 - task
       responses:
         '201':
@@ -168,7 +196,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int64
+            format: uint
           description: ID задачи для обновления
       requestBody:
         required: true
@@ -204,7 +232,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int64
+            format: uint
           description: ID задачи для удаления
       responses:
         '204':
@@ -232,10 +260,8 @@ components:
           description: емаил
           format: email
         password:
-          type: integer
-          format: uint
+          type: string
           description: пароль
-          writeOnly: true
       required:
         - email
     UserUpdate:
@@ -254,7 +280,7 @@ components:
       properties:
         id:
           type: integer
-          format: int64
+          format: uint
           description: Уникальный идентификатор задачи
           readOnly: true  # ID генерируется сервером
         task:
@@ -263,9 +289,11 @@ components:
         is_done:
           type: boolean
           description: Статус выполнения задачи (true - выполнена, false - не выполнена)
+        user_id:
+          type: integer
+          format: uint
       required:
         - task
-
     Error:
       type: object
       properties:
@@ -285,3 +313,5 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/Error'
+
+
